# temporal-discrete-graph-updater

./: .gitignore  .pre-commit-config.yaml  README.md  install_cuda_deps.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-testing.yml  code-quality-main.yaml  code-quality-pr.yaml  test.yaml
config/self-supervised/obs-gen/: data.yaml  main-model.yaml  small-model.yaml  trainer.yaml  wandb-logger.yaml
config/supervised/: allow_obs_with_same_label.yaml  data.yaml  main-model.yaml  small-model.yaml  trainer.yaml  wandb-logger.yaml
dgu/: calc_free_run_metrics.py  calculate_dataset_stats.py  constants.py  data.py  find_game_objs_same_label.py  generate_heatmap.py  graph.py  lr_finder_static_label_dgu.py  perform_stat_tests.py  train_static_label_dgu.py  utils.py  visualize_graph.py  visualize_groundtruth_graph.py
dgu/metrics/: __init__.py  exact_match.py  f1.py
dgu/nn/: dynamic_gnn.py  graph_event_decoder.py  graph_updater.py  rep_aggregator.py  temporal_graph.py  text.py  utils.py
dgu/train_static_label_dgu_conf/: config.yaml
scripts/: generate_heatmap.py  main.py  perform_stat_tests.py  visualize_groundtruth_graph.py
tdgu/: calc_free_run_metrics.py  constants.py  data.py  find_game_objs_same_label.py  generate_heatmap.py  graph.py  lr_finder_tdgu.py  preprocessor.py  self_supervised_train_tdgu.py  supervised_train_tdgu.py  train_tdgu.py  utils.py  visualize_graph.py
tdgu/metrics/: __init__.py  exact_match.py  f1.py
tdgu/nn/: dynamic_gnn.py  graph_event_decoder.py  graph_updater.py  rep_aggregator.py  text.py  utils.py
tdgu/self_supervised_train_tdgu_conf/: config.yaml
tdgu/supervised_train_tdgu_conf/: config.yaml
tdgu/train/: __init__.py  common.py  self_supervised.py  supervised.py
tdgu/train_static_label_dgu_conf/: config.yaml
tdgu/train_tdgu_conf/: config.yaml
tests/: test_data.py  test_graph.py  test_preprocessor.py  test_sample_train.py  test_self_supervised_train_tdgu.py  test_supervised_train_tdgu.py  test_train_static_label_dgu.py  test_train_tdgu.py
tests/data/: preprocessed_objs_with_same_label_test_data.jsonl  preprocessed_obs_gen_test_data.jsonl  preprocessed_sorted_test_free_run_data_batch_1.jsonl  preprocessed_test_data.jsonl  preprocessed_test_free_run_data.jsonl  preprocessed_test_free_run_data_batch_1.jsonl  preprocessed_test_free_run_data_batch_3.jsonl  self-supervised-test.ckpt  supervised-test.ckpt  test-fasttext.pt  test-fasttext.vec  test.ckpt  test_data.json  test_data_same_label_obj.json  test_node_vocab.txt  test_relation_vocab.txt  test_word_vocab.txt
tests/helpers/: gen_test_data.py  utils.py
tests/metrics/: test_exact_match.py  test_f1.py
tests/nn/: test_dynamic_gnn.py  test_graph_event_decoder.py  test_graph_updater.py  test_rep_aggregator.py  test_repr_aggr.py  test_temporal_graph.py  test_text.py  test_utils.py
tests/train/: test_common.py  test_self_supervised.py  test_supervised.py
vocabs/: node_vocab_objs_same_label.txt
(+7 files in other folders)
