[tool.poetry]
name = "tdgu"
version = "0.1.0"
description = "Temporal Discrete Graph Updater"
authors = ["Peter Yu <2057325+yukw777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.10.0"
torch = "^1.13.1"
torch-geometric = "^2.2.0"
pyg-lib = {version = "^0.1.0+pt113cu117", source = "pytorch-geometric"}
torch-scatter = {version = "^2.1.0+pt113cu117", source = "pytorch-geometric"}
torch-sparse = {version = "^0.6.16+pt113cu117", source = "pytorch-geometric"}
pytorch-lightning = "^1.9.3"
spacy = "^3.5.0"
networkx = "^3.0"
hydra-core = "^1.3.1"
torchmetrics = "~=0.11.1"
wandb = "^0.13.10"
transformers = "^4.26.1"
textworld = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
mypy = "^1.0.1"
black = "^23.1.0"
ipython = "^8.10.0"
line-profiler = "^4.0.2"
coverage = "^7.2.0"


[[tool.poetry.source]]
name = "pytorch-geometric"
url = "https://data.pyg.org/whl/torch-1.13.0+cu117.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"
markers = [
    "slow: mark test as slow."
]
addopts = "-m 'not slow'"
